# Projet-IESE5-Localisation

./: .gitignore  IHM.py  IHM_simple.py  README.md  Readme.md  traitement_donnees.ipynb
.west/: config
Bluetooth-Low-Energy_NRF-CONNECT/: CMakeLists.txt
DataAnalyse/: DataCollect.py  DataVisu
Donnees_BLE/: 10m_ext.csv  10m_humain_ext.csv  1m_bloc_metal.csv  1m_ext.csv  1m_ext_humain.csv  1m_int.csv  1m_int_humain.csv  20m_ext.csv  3m_ext.csv  3m_ext_humain.csv  3m_humain_int.csv  3m_int.csv  3m_metal.csv  4_5m_ext_voiture.csv  5m_ext.csv  5m_ext_humain.csv  5m_humain_int.csv  5m_int.csv  5m_metal.csv  9m_humain.csv  9m_int.csv  9m_metal.csv
Résultat mesures/: 4,5m ds extérieur voiture.csv
UWB-test/: CMakeLists.txt  prj.conf
UWB-test-examples/: CMakeLists.txt  IHM.py  IHM_double.py  nrf52833dk_nrf52833.overlay
UWB-test-examples/build_1/: .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  UWB-test-examples_sysbuild_cache.txt.tmp  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  domains.yaml  zephyr_settings.txt
UWB-test-examples/platform/: port.c  port.h
UWB-test-examples/src/: main.c
UWB-test/lib/dw3000-decadriver-source-master/dwt_uwb_driver/: deca_interface.h
UWB-test/lib/dw3000-decadriver-source-master/dwt_uwb_driver/dw3720/: dw3720_device.c
UWB-test/src/: main.c
channel_sounding_ras_initiator/: .gitignore  CMakeLists.txt  prj.conf
channel_sounding_ras_initiator/src/: main.c  script_python.py
channel_sounding_ras_reflector/: .gitignore  prj.conf
single side/: 1m single side sans obstacles.csv
(+168 files in other folders)
